[workspace]
    exclude = ["docker/", "examples/"]
    members = [
        "border",
        "border-async-trainer",
        "border-atari-env",
        "border-candle-agent",
        "border-core",
        "border-minari",
        "border-mlflow-tracking",
        "border-policy-no-backend",
        "border-py-gym-env",
        "border-tch-agent",
        "border-tensorboard",
    ]

    [workspace.package]
        categories   = ["science"]
        description  = "Reinforcement learning library"
        edition      = "2018"
        keywords     = ["learning", "reinforcement", "rl"]
        license      = "MIT OR Apache-2.0"
        repository   = "https://github.com/laboroai/border"
        rust-version = "1.84"
        version      = "0.0.8"

    [workspace.dependencies]
        anyhow            = "1.0.38"
        aquamarine        = "0.1"
        bincode           = "1.3.3"
        candle-core       = "0.9.2-alpha.1"
        candle-nn         = "0.9.2-alpha.1"
        candle-optimisers = { git = "https://github.com/ciresnave/candle-optimisers.git" }
        chrono            = "0.4"
        clap              = { version = "4.5.8", features = ["derive"] }
        crossbeam-channel = "0.5.1"
        csv               = "1.1.5"
        dirs              = "3.0.2"
        env_logger        = "0.8.2"
        fastrand          = "1.4.0"
        image             = "0.23.14"
        itertools         = "0.12.1"
        log               = "0.4"
        ndarray           = "0.15.1"
        num-traits        = "0.2.14"
        numpy             = "0.14.1"
        ordered-float     = "4.2.0"
        pyo3              = { version = "=0.14.5", default-features = false }
        rand              = { version = "=0.8.5", features = ["small_rng"] }
        reqwest           = { version = "0.11.26", features = ["blocking", "json"] }
        segment-tree      = "2.0.0"
        serde             = "1.0.194"
        serde_json        = "^1.0.114"
        serde_yaml        = "0.8.7"
        tch               = "0.16.0"
        tempdir           = "0.3.7"
        tensorboard-rs    = "0.2.4"
        thiserror         = "1.0"
        xxhash-rust       = { version = "0.8.10", features = ["xxh3"] }
